--- a/tox.ini
+++ b/tox.ini
@@ -10,4 +10,5 @@ passenv =
 deps =
     -rrequirements-development.txt
 commands =
-    coverage erase && nosetests -dsv --with-yanc --with-coverage --cover-package mercadobitcoin
+    coverage erase
+    nosetests -dsv --with-yanc --with-coverage --cover-package bitcointrade
