--- a/tests/cassettes/tests_private_api/test_litecoin_create_withdraw.yml
+++ b/tests/cassettes/tests_private_api/test_litecoin_create_withdraw.yml
@@ -1,25 +1,26 @@
 interactions:
 - request:
-    body: !!python/unicode '{"destination":"LhWeEXcVHpHxonqbLooKPNMzbmMetdHJdC","fee":0.0001,"fee_type":"slow","amount":0.1}'
+    body: !!python/unicode '{"fee_type": "slow", "destination": "LhWeEXcVHpHxonqbLooKPNMzbmMetdHJdC",
+      "amount": 0.1}'
     headers:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Authorization: [ApiToken 42]
       Connection: [keep-alive]
-      Content-Length: ['95']
+      Content-Length: ['96']
       Content-Type: [application/json]
       User-Agent: [python-requests/2.19.1]
     method: POST
-    uri: https://api.bitcointrade.com.br/v1/litecoin/withdraw
+    uri: https://api.bitcointrade.com.br/v2/litecoin/withdraw
   response:
-    body: {string: !!python/unicode '{"message":null,"data":{"code":"HJzpwYDrz","origin_address":"LhWeEXcVHpHxonqbLooKPNMzbmMetdHJdC","destination_address":"LhWeEXcVHpHxonqbLooKPNMzbmMetdHJdC","amount":0.1,"miner_fee":0.0001,"miner_fee_type":"slow","tax_index":0,"tax_index_calculated":0,"tax_amount":0,"status":"pending","create_date":"2018-01-25T16:37:15.443Z","update_date":"2018-01-25T16:37:15.017Z","transaction_id":null,"link":null}}'}
+    body: {string: !!python/unicode '{"message":null,"data":{"code":"XXXXXXXXX","origin_address":"LhWeEXcVHpHxonqbLooKPNMzbmMetdHJdC","destination_address":"LhWeEXcVHpHxonqbLooKPNMzbmMetdHJdC","amount":0.09874,"miner_fee":0.00126,"miner_fee_type":"slow","tax_index":0,"tax_index_calculated":0,"tax_amount":0,"status":"pending","create_date":"2019-02-04T15:58:51.517Z","update_date":"2019-02-04T15:58:51.857Z","transaction_id":null,"currency_code":"LTC","link":null}}'}
     headers:
       access-control-allow-origin: ['*']
       connection: [keep-alive]
-      content-length: ['183']
+      content-length: ['445']
       content-type: [application/json; charset=utf-8]
-      date: ['Fri, 27 Jul 2018 20:51:57 GMT']
-      etag: ['W/"b7-0ogYrjcnF0QptjKWMvlan8BVs0o:dtagent10147180705145128HQ6X"']
-      x-response-time: [667.483ms]
+      date: ['Mon, 04 Feb 2019 15:58:51 GMT']
+      etag: [W/"1bd-S36bCNnbxxDmVRsnFvg2dihyNbw"]
+      x-response-time: [466.399ms]
     status: {code: 200, message: OK}
 version: 1
