--- a/tests/cassettes/tests_api/test_ticker.yml
+++ b/tests/cassettes/tests_api/test_ticker.yml
@@ -8,18 +8,41 @@ interactions:
       Content-Type: [application/json]
       User-Agent: [python-requests/2.19.1]
     method: GET
-    uri: https://api.bitcointrade.com.br/v1/public/BTC/ticker
+    uri: https://api.bitcointrade.com.br/v2/public/BRLBTC/ticker
   response:
-    body: {string: '{"message":null,"data":{"high":31500,"low":29600.11,"volume":124.94089665,"trades_quantity":2320,"last":31245,"sell":31199.99,"buy":31050,"date":"2018-07-27T19:53:32.612Z"}}'}
+    body: {string: '{"message":null,"data":{"buy":12707.99,"high":12780,"last":12615,"low":12400.05,"sell":12721.99,"trades_quantity":594,"volume":56.78407123,"date":"2019-02-04T14:22:23.409Z"}}'}
+    headers:
+      access-control-allow-origin: ['*']
+      apicache-store: [memory]
+      apicache-version: [1.2.0]
+      connection: [keep-alive]
+      content-length: ['174']
+      content-type: [application/json; charset=utf-8]
+      date: ['Mon, 04 Feb 2019 14:22:27 GMT']
+      etag: [W/"ae-xcQIM92+HmthyueDfmddcvv2lVw"]
+      x-response-time: [0.353ms]
+    status: {code: 200, message: OK}
+- request:
+    body: null
+    headers:
+      Accept: ['*/*']
+      Accept-Encoding: ['gzip, deflate']
+      Connection: [keep-alive]
+      Content-Type: [application/json]
+      User-Agent: [python-requests/2.19.1]
+    method: GET
+    uri: https://api.bitcointrade.com.br/v2/public/BRLBTC/ticker
+  response:
+    body: {string: '{"message":null,"data":{"buy":12707.99,"high":12780,"last":12615,"low":12400.05,"sell":12710.6,"trades_quantity":594,"volume":56.78407123,"date":"2019-02-04T14:22:39.040Z"}}'}
     headers:
       Connection: [keep-alive]
       Content-Length: ['173']
       Content-Type: [application/json; charset=utf-8]
-      Date: ['Fri, 27 Jul 2018 19:53:41 GMT']
-      X-Response-Time: [6.559ms]
+      Date: ['Mon, 04 Feb 2019 14:22:49 GMT']
+      X-Response-Time: [0.448ms]
       access-control-allow-origin: ['*']
       apicache-store: [memory]
       apicache-version: [1.2.0]
-      etag: ['W/"ad-LnFA1Q0E5Oh3Pz4ewsOKE244TJM:dtagent10147180705145128HQ6X"']
+      etag: [W/"ad-gy9amushlV8vS3HainUOVmp7K10"]
     status: {code: 200, message: OK}
 version: 1
