--- a/tests/cassettes/tests_private_api/test_litecoin_withdraw_fee.yml
+++ b/tests/cassettes/tests_private_api/test_litecoin_withdraw_fee.yml
@@ -9,16 +9,38 @@ interactions:
       Content-Type: [application/json]
       User-Agent: [python-requests/2.19.1]
     method: GET
-    uri: https://api.bitcointrade.com.br/v1/litecoin/withdraw/fee
+    uri: https://api.bitcointrade.com.br/v2/litecoin/withdraw/fee
   response:
-    body: {string: !!python/unicode '{"message":null,"data":[{"name":"fast","amount":0.00051328},{"name":"regular","amount":0.00038496},{"name":"slow","amount":0.00025664}]}'}
+    body: {string: '{"message":null,"data":[{"name":"fast","amount":0.00051328},{"name":"regular","amount":0.00038496},{"name":"slow","amount":0.0003}]}'}
     headers:
       access-control-allow-origin: ['*']
       connection: [keep-alive]
-      content-length: ['136']
+      content-length: ['132']
       content-type: [application/json; charset=utf-8]
-      date: ['Fri, 27 Jul 2018 20:52:04 GMT']
-      etag: ['W/"88-hnPYeowBlIFUF/mQVSxhD7uOCLk:dtagent10147180705145128HQ6X"']
-      x-response-time: [81.681ms]
+      date: ['Mon, 04 Feb 2019 14:22:39 GMT']
+      etag: [W/"84-/UrREQjsV4ZLG5yg0fxPdcf388U"]
+      x-response-time: [51.566ms]
+    status: {code: 200, message: OK}
+- request:
+    body: null
+    headers:
+      Accept: ['*/*']
+      Accept-Encoding: ['gzip, deflate']
+      Authorization: [ApiToken 42]
+      Connection: [keep-alive]
+      Content-Type: [application/json]
+      User-Agent: [python-requests/2.19.1]
+    method: GET
+    uri: https://api.bitcointrade.com.br/v2/litecoin/withdraw/fee
+  response:
+    body: {string: '{"message":null,"data":[{"name":"fast","amount":0.00051328},{"name":"regular","amount":0.00038496},{"name":"slow","amount":0.0003}]}'}
+    headers:
+      Access-Control-Allow-Origin: ['*']
+      Connection: [keep-alive]
+      Content-Length: ['132']
+      Content-Type: [application/json; charset=utf-8]
+      Date: ['Mon, 04 Feb 2019 14:23:00 GMT']
+      ETag: [W/"84-/UrREQjsV4ZLG5yg0fxPdcf388U"]
+      X-Response-Time: [50.590ms]
     status: {code: 200, message: OK}
 version: 1
